refactor: java files structure

--- a/src/app_config.json
+++ b/src/app_config.json
@@ -5,14 +5,14 @@
          "patterns": [
             {
                "patternName": "Singleton",
-               "patternFilesDirectory" : "Singleton",
+               "patternFilesDirectory" : "singleton",
                "fileNames": [
-                  "singleton.txt"
+                  "Singleton.java"
                ]
             },
             {
                "patternName": "Builder",
-               "patternFilesDirectory" : "Builder",
+               "patternFilesDirectory" : "builder",
                "fileNames": [
                   "Builder.java",
                   "Director.java",
@@ -22,8 +22,10 @@
             },
             {
                "patternName": "Factory Method",
-               "patternFilesDirectory" : "",
-               "fileNames": []
+               "patternFilesDirectory" : "factorymethod",
+               "fileNames": [
+                  "Creator.java"
+               ]
             },
             {
                "patternName": "Abstract Factory",
