feat: simple class name parametrization

--- a/src/app_config.json
+++ b/src/app_config.json
@@ -7,7 +7,7 @@
                "patternName": "Singleton",
                "patternFilesDirectory" : "singleton",
                "fileNames": [
-                  "Singleton.java"
+                  "singleton.txt"
                ]
             },
             {
