feat: global and local params

--- a/src/app_config.json
+++ b/src/app_config.json
@@ -18,13 +18,15 @@
                      "shouldBeVisible": true,
                      "label": "Singleton class name",
                      "defaultValue": "Singleton",
-                     "replace": "$CLASSNAME$"
+                     "replace": "$CLASSNAME$",
+                     "filename": ""
                   },
                   {
                      "shouldBeVisible": true,
                      "label": "Name of an Singleton instance",
                      "defaultValue": "INSTANCE",
-                     "replace": "$INSTANCENAME$"
+                     "replace": "$INSTANCENAME$",
+                     "filename": ""
                   }
                ]
             },
@@ -54,37 +56,43 @@
                      "shouldBeVisible": true,
                      "label": "Builder class name",
                      "defaultValue": "Builder",
-                     "replace": "$BUILDER_CLASSNAME$"
+                     "replace": "$BUILDER_CLASSNAME$",
+                     "filename": ""
                   },
                   {
                      "shouldBeVisible": true,
                      "label": "Builder methods",
                      "defaultValue": "void buildPartA();\nvoid buildPartB();",
-                     "replace": "$BUILDER_METHODS$"
+                     "replace": "$BUILDER_METHODS$",
+                     "filename": ""
                   },
                   {
                      "shouldBeVisible": false,
                      "label": "Builder methods extended",
                      "defaultValue": "$BUILDER_METHODS$",
-                     "replace": "$BUILDER_METHODS_EXTENDED$"
+                     "replace": "$BUILDER_METHODS_EXTENDED$",
+                     "filename": ""
                   },
                   {
                      "shouldBeVisible": true,
                      "label": "Director class name",
                      "defaultValue": "Director",
-                     "replace": "$DIRECTOR_CLASSNAME$"
-                  },
-                  {
-                     "shouldBeVisible": true,
-                     "label": "Concrete Builder class name (1)",
-                     "defaultValue": "ConcreteBuilder",
-                     "replace": "$CONCRETE_BUILDER_CLASSNAME1$"
+                     "replace": "$DIRECTOR_CLASSNAME$",
+                     "filename": ""
                   },
                   {
                      "shouldBeVisible": true,
                      "label": "Product class name",
                      "defaultValue": "Product",
-                     "replace": "$PRODUCT_CLASSNAME$"
+                     "replace": "$PRODUCT_CLASSNAME$",
+                     "filename": ""
+                  },
+                  {
+                     "shouldBeVisible": true,
+                     "label": "Concrete Builder class name (1)",
+                     "defaultValue": "ConcreteBuilder",
+                     "replace": "$CONCRETE_BUILDER_CLASSNAME1$",
+                     "filename": "ConcreteBuilder.java"
                   }
                ]
             },
